# rates-backend

./: .env  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: github-actions.yml
api/: admin.py  apps.py  forms.py  models.py  repository.py  serializers.py  tasks.py  urls.py  views.py
api/management/commands/: generate_periodic_tasks.py
api/migrations/: 0001_initial.py
api/tests/: __init__.py  conftest.py
api/tests/fixtures/: rates.py  registration.py
api/tests/rest/: test_analitics.py  test_currencies.py  test_rates.py  test_registration.py
rates/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: conftest.py
tests/fixtures/: __init__.py  analitics.py  rates.py  registration.py  users.py
tests/rest/: __init__.py  test_analitics.py  test_currencies.py  test_rates.py  test_registration.py
